cabal-version: 2.2
name:          github-issues
version:       0
synopsis:      Barebones GitHub issue dumper for offline grepping
category:      GitHub 
description:
  Barebones GitHub issue dumper for offline grepping.
  .
  @
  github-issues owner repo
  @
  .
  will create @issues@ directory with @.txt@ file per issue / pull-request

maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
license:       GPL-2.0-or-later
license-file:  LICENSE

source-repository head
  type:     git
  location: https://github.com/phadej/github-issues.git

library
  default-language: Haskell2010
  hs-source-dirs:   src

  -- ghc boot libs
  build-depends:
    , base        >=4.11 && <5
    , binary
    , bytestring
    , directory
    , filepath
    , text

  -- other dependencies
  build-depends:
    , base16-bytestring  ^>=0.1.1.6
    , cryptohash-sha256  ^>=0.11.101.0
    , github             ^>=0.24
    , http-client        ^>=0.6.4

  exposed-modules:  GitHubIssues.Main

executable github-issues
  default-language: Haskell2010
  hs-source-dirs:   cli
  ghc-options:      -threaded -rtsopts
  main-is:          Main.hs
  build-depends:
    , base
    , github-issues
